# tiralabra

./: .coveragerc  .gitignore  README.md  määrittelydokumentti.md  pyproject.toml  tuntikirjanpito.md  viikkoraporttipohja.md
src/: huffman.py  lz.py  main.py
src/sampletexts/: aabcbad.txt  pg844.txt  sources.md
src/tests/: huffman_test.py  lz_test.py
viikko1/: viikkoraportti 1.md
viikko2/: viikkoraportti 2.md
viikko3/: viikkoraporti3.md
viikko4/: viikkoraportti4.md
viikko5/: viikkoraportti5.md
viikko6/: viikkoraportti6.md
